Templates for most pages are done. Image links need to be added but all images are there. Added Google Map map of the location using the API

--- a/website/css/aboutUs.css
+++ b/website/css/aboutUs.css
@@ -1,6 +1,11 @@
 #map {
-	width: 40%;
 	float: left;
+}
+
+#map_canvas {
+	width: 250px;
+	height: 250px;
+	background-color: #CCC;
 }
 
 #contactInfo {
