Updated Product Lists to have the correct Images, and started products.css to style all product lists for display

--- a/website/css/style.css
+++ b/website/css/style.css
@@ -64,6 +64,11 @@ a {
     top: 200px;
     float: left;
     width: 200px;
+    background-image: url(../img/nav_background.png);
+	background-repeat: repeat-y;
+	background-position: left top;
+	overflow: hidden;
+	height: 100%;
 }
 
 #main {
