--- a/website/css/style.css
+++ b/website/css/style.css
@@ -25,18 +25,12 @@ a {
 }
 
 #header, #footer {
-	background-color: #303136;
+	background-color: #282828;
 }
 
 #header {
 	height: 200px;
 	padding-top: 10px;
-}
-
-#header a {
-	float: left;
-	position: absolute;
-	top: 10px;
 }
 
 #header h1 {
@@ -53,14 +47,18 @@ a {
 #header img {
 	width: 190px;
 	height: 190px;
-	
+	background-color: #282828;
 	padding-left: 10px;
 	padding-top: 10px;
+	padding-bottom: 10px;
+	position: fixed;
+	top: 0px;
+	left: 0px;
 }
 
 #navigation {
 	margin-top: 10px;
-    position: absolute;
+    position: fixed;
     top: 200px;
     float: left;
     width: 200px;
