--- a/website/css/home-mid.css
+++ b/website/css/home-mid.css
@@ -10,20 +10,50 @@
 }
 
 .specials .special {
-	height: 20%;
-	width: 50%;
+	width: 100%;
 	float:left;
+	padding-bottom: 5px;
+	border-bottom: 1px;
+	border-top: 0px;
+	border-left: 0px;
+	border-right: 0px;
+	border-color: #000;
+	border-style: solid;
+}
+
+.specials .special h1 {
+	float: left;
+	width: 50%;
+	padding-left: 10px;
+	padding-top: 10px;
+	top: 0px;
 }
 
 .specials .special h2 {
 	float: left;
+	text-align: left;
+	display: block;
+	width: 50%;
 	padding-left: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
 }
 
 .specials .special p {
 	float: left;
-	padding-top: 20px;
+	display: block;
+	width: 50%;
 	padding-left: 10px;
+}
+
+.special .special .offer {
+	text-align: right;
+	width: 100%;
+}
+
+.special .special .cost {
+	width: 0px;
+	float: right;
 }
 
 .special img {
