--- a/website/css/style-mid.css
+++ b/website/css/style-mid.css
@@ -29,13 +29,13 @@ a {
 }
 
 #header {
-	height: 200px;
+	height: 133px;
 	padding-top: 10px;
 }
 
 #header h1 {
-	margin-left: 240px;
-	padding-top: 70px;
+	margin-left: 140px;
+	padding-top: 35px;
 	color: white;
 	font-size: 40px;
 	
@@ -45,8 +45,8 @@ a {
 }
 
 #header img {
-	width: 190px;
-	height: 190px;
+	width: 120px;
+	height: auto;
 	background-color: #282828;
 	padding-left: 10px;
 	padding-top: 10px;
@@ -56,13 +56,18 @@ a {
 	left: 0px;
 }
 
+#header img.resize{
+	width:133px;
+    height: 133px;
+}
+
 #navigation {
 	margin-top: 10px;
     position: fixed;
     top: 200px;
     float: left;
-    width: 200px;
-    background-image: url(../img/nav_background.png);
+    width: 133px;
+    background-image: url(../img/nav_background-small.png);
 	background-repeat: repeat-y;
 	background-position: left top;
 	overflow: hidden;
@@ -70,7 +75,7 @@ a {
 }
 
 #main {
-	margin-left: 200px;
+	margin-left: 133px;
 	background-color: white;
 	overflow: hidden;
 	padding-right: 10px;
@@ -97,16 +102,16 @@ ul {
 #navigation li a, #navigation li {
 	background-color: #131313;
 	display: block;
-    width: 200px;
+    width: 133px;
 	text-align: left;
-	text-indent: 30px;
-	line-height: 40px;
+	padding-left: 5px;
+	line-height: 30px;
 	font-size: 95%;
 	color: white;
 }
 
 #navigation ul li ul a{
-	text-indent: 45px;
+	padding-left: 8px;
 }
 
 #navigation>ul>li {
