--- a/website/css/style-full.css
+++ b/website/css/style-full.css
@@ -1,11 +1,11 @@
 #header {
-	height: 133px;
+	height: 200px;
 	padding-top: 10px;
 }
 
 #header h1 {
-	margin-left: 140px;
-	padding-top: 0px;
+	margin-left: 240px;
+	padding-top: 70px;
 	color: white;
 	font-size: 40px;
 	
@@ -15,8 +15,8 @@
 }
 
 #header img {
-	width: 120px;
-	height: auto;
+	width: 190px;
+	height: 190px;
 	background-color: #282828;
 	padding-left: 10px;
 	padding-top: 10px;
@@ -26,18 +26,13 @@
 	left: 0px;
 }
 
-#header img.resize{
-	width:133px;
-    height: 133px;
-}
-
 #navigation {
 	margin-top: 10px;
     position: fixed;
-    top: 133px;
+    top: 200px;
     float: left;
-    width: 133px;
-    background-image: url(../img/nav_background-small.png);
+    width: 200px;
+    background-image: url(../img/nav_background.png);
 	background-repeat: repeat-y;
 	background-position: left top;
 	overflow: hidden;
@@ -45,7 +40,7 @@
 }
 
 #main {
-	margin-left: 133px;
+	margin-left: 200px;
 	background-color: white;
 	overflow: hidden;
 	padding-right: 10px;
@@ -54,14 +49,14 @@
 #navigation li a, #navigation li {
 	background-color: #131313;
 	display: block;
-    width: 133px;
+    width: 200px;
 	text-align: left;
-	padding-left: 5px;
-	line-height: 30px;
+	text-indent: 30px;
+	line-height: 40px;
 	font-size: 95%;
 	color: white;
 }
 
 #navigation ul li ul a{
-	padding-left: 8px;
+	text-indent: 45px;
 }
