--- a/website/css/home.css
+++ b/website/css/home.css
@@ -9,30 +9,6 @@
 	padding-bottom: 10px;
 }
 
-.specials .special {
-	height: 20%;
-	width: 50%;
-	float:left;
-}
-
-.specials .special h2 {
-	float: left;
-	padding-left: 10px;
-}
-
-.specials .special p {
-	float: left;
-	padding-top: 20px;
-	padding-left: 10px;
-}
-
-.special img {
-	float: left;
-	width: 150px;
-	height: 150px;
-	margin: 10px;
-}
-
 .special h1, .special h2, .special p {
 	float right;
 }
@@ -50,4 +26,48 @@
 
 .special p {
 	font-size: 14px;
+}
+
+
+.specials .special h1 {
+	float: left;
+	width: 50%;
+	text-align: left;
+	padding-left: 10px;
+	padding-top: 10px;
+	top: 0px;
+}
+
+.specials .special h2 {
+	float: left;
+	text-align: left;
+	display: block;
+	width: 50%;
+	padding-left: 10px;
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.specials .special p {
+	float: left;
+	display: block;
+	width: 50%;
+	padding-left: 10px;
+}
+
+.special .special .offer {
+	text-align: right;
+	width: 100%;
+}
+
+.special .special .cost {
+	width: 0px;
+	float: right;
+}
+
+.special img {
+	float: left;
+	width: 150px;
+	height: 150px;
+	margin: 10px;
 }
