--- a/website/css/style.css
+++ b/website/css/style.css
@@ -12,9 +12,10 @@ html {
 body {
 	margin-left: auto;
 	margin-right: auto;
-	background-color: #131313;
+	/*background-color: #131313;*/
 	box-shadow: -5px 0 15px rgba(0, 0, 0, 0.75);
 	height: 100%;
+	position: relative;
 }
 
 body, #header, #footer {
@@ -28,8 +29,14 @@ a {
 	background-color: #282828;
 }
 
+#main {
+	height: 100%;
+}
+
 #content {
 	overflow: hidden;
+	padding-bottom: 100px;
+	min-height: 50%;
 }
 
 ul {
