--- a/website/css/aboutUs.css
+++ b/website/css/aboutUs.css
@@ -1,16 +1,12 @@
 #map {
 	float: left;
+	padding-left: 10px;
 }
 
 #map_canvas {
 	width: 250px;
 	height: 250px;
 	background-color: #CCC;
-}
-
-#contactInfo {
-	width: 60%;
-	float: left;
 }
 
 #main h1 {
@@ -22,6 +18,7 @@
 	text-align: center;
 	font-size: 22px;
 	padding-top: 10px;
+	padding-bottom: 10px;
 }
 
 #contactInfo>h1 {
@@ -29,10 +26,8 @@
 	font-size: 22px;
 	padding-top: 10px;
 }
-
-.contact {
-	width: 100%;
-	display: inline-block;
+#contactInfo p {
+	padding-left: 15px;
 }
 
 .contact h1 {
@@ -43,9 +38,8 @@
 
 .contact p {
 	font-size: 14px;
-	float: right;
-	width: 50%;
+	float: left;
+	width: 45%;
 	text-align: left;
-	vertical-align: center;
 	line-height: normal;
 }
