--- a/website/css/products.css
+++ b/website/css/products.css
@@ -48,3 +48,22 @@
 	white-space:nowrap;
 	overflow:hidden;
 }
+
+span.stars, span.stars span {
+    display: block;
+    background: url(../img/stars.png) 0 -16px repeat-x;
+    width: 80px;
+    height: 16px;
+}
+
+span.stars span {
+    background-position: 0 0;
+}
+
+.ratingNum {
+	display: block;
+	width: 0;
+	height: 0;
+	overflow: hidden;
+	position: absolute;
+}
