--- a/website/css/contactUs.css
+++ b/website/css/contactUs.css
@@ -9,3 +9,33 @@
 	padding-left: 20px;
 	padding-top: 10px;
 }
+
+#errorMessage
+{
+	display: block;
+	position: absolute;
+	top: 10px;
+	width: 400px;
+	left: 35%;
+	background-color: rgb(254, 204, 203);
+	margin-left: auto;
+	margin-right: auto;
+	padding: 5px;
+	font-style: italic;
+	border-width: 2px;
+	border-style: solid;
+	border-color: rgb(204, 114, 119);
+}
+
+#caption {
+	margin-top: 0;
+	margin-bottom: 0;
+	margin-left: 5px;
+	margin-right: 5px;
+	font-style: italic;
+
+	background-color: #fff;
+	position: relative;
+	top: -30px;
+}
+
